[gd_scene load_steps=5 format=2]

[ext_resource path="res://lobby/script/dialog.gd" type="Script" id=1]
[ext_resource path="res://lobby/dialog/requesting.tscn" type="PackedScene" id=2]
[ext_resource path="res://lobby/dialog/card_upgrade/card_upgrade.tscn" type="PackedScene" id=3]
[ext_resource path="res://lobby/page/battle/chest_open.tscn" type="PackedScene" id=4]

[node name="Dialog" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="MatchWating" parent="." instance=ExtResource( 2 )]
visible = false
elapsed_label = NodePath("../MatchWating/Opponent/Elapsed")

[node name="CardUpgrade" parent="." instance=ExtResource( 3 )]
visible = false

[node name="ChestOpen" parent="." instance=ExtResource( 4 )]
visible = false
